--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <div id="loading">
     <div class="spinner"></div>
     <p>Loading... Please wait.</p>
+    <p>Note: if the image displays too slowly, try exiting and re-entering or change the prompt.</p>
 </div>
 
 <script>
